[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Login/RegisterSection.gd" type="Script" id=1]

[node name="Register" type="VBoxContainer"]
margin_left = 371.0
margin_top = 234.0
margin_right = 652.0
margin_bottom = 365.0
custom_constants/separation = 8
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RegisterLabel" type="Label" parent="."]
margin_right = 281.0
margin_bottom = 14.0
text = "REGISTER"
align = 1

[node name="GridContainer" type="GridContainer" parent="."]
margin_top = 22.0
margin_right = 281.0
margin_bottom = 104.0
custom_constants/vseparation = 5
custom_constants/hseparation = 15
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UserName" type="Label" parent="GridContainer"]
margin_top = 5.0
margin_right = 66.0
margin_bottom = 19.0
text = "Username"
align = 1
valign = 1

[node name="UserNameEdit" type="LineEdit" parent="GridContainer"]
margin_left = 81.0
margin_right = 281.0
margin_bottom = 24.0
rect_min_size = Vector2( 200, 0 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Password" type="Label" parent="GridContainer"]
margin_top = 34.0
margin_right = 66.0
margin_bottom = 48.0
text = "Password"
align = 1
valign = 1

[node name="PasswordEdit" type="LineEdit" parent="GridContainer"]
margin_left = 81.0
margin_top = 29.0
margin_right = 281.0
margin_bottom = 53.0
rect_min_size = Vector2( 200, 0 )
align = 1
secret = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Confirm" type="Label" parent="GridContainer"]
margin_top = 63.0
margin_right = 66.0
margin_bottom = 77.0
text = "Confirm"
align = 1
valign = 1

[node name="ConfirmPWEdit" type="LineEdit" parent="GridContainer"]
margin_left = 81.0
margin_top = 58.0
margin_right = 281.0
margin_bottom = 82.0
rect_min_size = Vector2( 200, 0 )
align = 1
secret = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Register" type="Button" parent="."]
margin_top = 112.0
margin_right = 281.0
margin_bottom = 132.0
text = "Register"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="."]
margin_top = 140.0
margin_right = 281.0
margin_bottom = 160.0
rect_min_size = Vector2( 50, 20 )
rect_pivot_offset = Vector2( 36.9232, 9.42915 )
text = "Back"

[connection signal="pressed" from="Register" to="." method="_on_Register_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
